--- a/public/index.css
+++ b/public/index.css
@@ -1,3 +1,8 @@
+body {
+  position: relative;
+  margin: 0;
+}
+
 #img {
   display: block;
   margin: auto;
@@ -6,13 +11,22 @@
   padding: 2rem;
 }
 
-#canvas {
-  display: block;
-  margin: 2rem auto;
-  width: 540px;
-  height: 540px;
+#pointer-local,
+#pointer-remote {
+  position: absolute;
+  left: 0;
+  top: 0;
+  background-color: silver;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
 }
 
+#pointer-remote {
+  background-color: green;
+  width: 5px;
+  height: 5px;
+}
 
 iframe {
   border: 1px dotted silver;
