Trying to get it on a server

--- a/public/index.css
+++ b/public/index.css
@@ -1,57 +1,1 @@
-#editorchrome {
-  font-family: "Iosevka-Fixed-SS09";
-  background-color: #edebe9;
-  position: relative;
-  margin: 0;
-}
-
-#editorchrome {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-#gotourlbutton.invalid {
-    pointer-events: none;
-    opacity: 0;
-  }
-#gotourl.invalid {
-    border: 1px solid #b0789b;
-  }
-
-#gotourlbutton.valid {
-    pointer-events: auto;
-    opacity: 1;
-  }
-#gotourl.valid {
-    border: 1px solid white;
-  }
-
-#editorchrome h4 {
-  text-align: center;
-}
-
-#editorchrome #img {
-  display: block;
-  margin: auto;
-  height: 128px;
-  width: 128px;
-  padding: 2rem;
-}
-
-#pointer-local,
-#pointer-remote {
-  position: absolute;
-  left: 0;
-  top: 0;
-  background-color: silver;
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-}
-
-#pointer-remote {
-  background-color: green;
-  width: 5px;
-  height: 5px;
-}
+#editorchrome{font-family:"Iosevka-Fixed-SS09";background-color:#edebe9;position:relative;margin:0}#editorchrome{position:absolute;top:0;left:0}#gotoform{position:fixed;right:0;top:0}#gotourlbutton.invalid{pointer-events:none;opacity:0}#gotourl.invalid{border:1px solid #b0789b}#gotourlbutton.valid{pointer-events:auto;opacity:1}#gotourl.valid{border:1px solid white}#editorchrome h4{text-align:center}#editorchrome #img{display:block;margin:auto;height:128px;width:128px;padding:2rem}#pointer-local,#pointer-remote{position:absolute;left:0;top:0;pointer-events:none;background-color:silver;width:10px;height:10px;border-radius:50%}#pointer-remote{background-color:green;width:5px;height:5px}
